# notification-rs

./: .gitignore  Cargo.toml
src/: app.rs  db.rs  main.rs  notification.rs  terminal.rs  ui.rs
