[package]
name = "notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.8.0"
sqlx = { version = "0.7.0", features=["sqlite","runtime-tokio-native-tls","chrono"]}
chrono = "0.4.26"
tokio = { version = "1.29.1", features=["macros","rt-multi-thread"]}
tui = "0.19.0"
crossterm = "0.26.1"
tokio-scoped = "0.2.0"